src/content/styles/modules/_details.scss
@mixin details {
    $slide-out-width: rem(28);

    .rv-details {
        display: flex;
        position: absolute;
        top: 0;
        bottom: 0;
        right: 0;
        left: 0;

        &-layer {
            &-button {
                padding: 0;
                margin: 0;
                position: absolute;
                left: 0;
                width: 100%;
                top: 0;
                bottom: 0;
                z-index: 1;
            }

            &-badge {
                position: absolute;
                bottom: rem(0.3);
                height: rem(1.6);
                width: rem(1.6);
                left: rem(3.2) - rem(0.3);
                font-size: rem(1.0);
                display: flex;
                background-color: $primary-color-dark;
                color: $primary-color-text;
                border-radius: 50%;
                align-items: center;
                justify-content: center;
            }

            &-name {
                text-transform: none;
                font-size: rem(1.6);
                line-height: rem(2.0);
                font-weight: normal;
                margin: rem(0.8);
                text-overflow: ellipsis;
                display: flex;
                flex-direction: column;
                overflow: hidden;

                > span {
                    white-space: nowrap;
                    overflow: hidden;
                    text-overflow: ellipsis;
                }
            }
        }

        &-layer-list {
            width: rem(4.8);
            position: absolute;
            background: white;
            left: 0;
            top: 0;
            bottom: - rem(0.8);
            border-right: solid 1px $divider-color-light;
            overflow: hidden;

            &-item {
                width: $slide-out-width;
                display: flex;
                position: relative;
                height: rem(4.8);
                align-items: center;
                position: relative;

                md-progress-circular {
                    position: absolute;
                    left: 0;
                    top: 0;
                    z-index: 0;
                }

                rv-toc-entry-symbology {
                    margin: rem(0.8);
                    opacity: 1;
                    transition: opacity $swift-ease-in-duration $swift-ease-in-out-timing-function;
                    // this makes the symbology image more opaque when the loading indicator is visible
                    &.rv-disabled {
                        opacity: 0.2;
                    }
                }

                &.rv-selected {
                    &:before {
                        background-color: $accent-color;
                    }
                }

                &:before {
                    content: "";
                    position: absolute;
                    top: 0;
                    bottom: 0;
                    left: 0;
                    width: 3px;
                    background-color: transparent;
                    transition: background-color $swift-ease-in-duration $swift-ease-in-out-timing-function;
                    z-index: 3;
                }
            }
        }

        .rv-details-data {
            opacity: 1;
            transition: opacity $swift-ease-in-duration $swift-ease-in-out-timing-function;
        }

        &.rv-expanded {
            .rv-details-layer-list {
                border-color: $divider-color;
            }

            .rv-details-data {
                opacity: 0.3;
            }
        }

        &.rv-multiple {
            .rv-details-data {
                margin-left: rem(4.8);
            }
        }
        // TODO enhance to proper sassyness
        .rv-details-zebra-list {
            list-style-type: none;
            padding: 0;
            border-bottom: 1px solid $divider-color-light;

            > li {
                padding: 5px;
                overflow: auto;
            }

            > li:nth-child(even) {
                background-color: #ddd;
            }
        }

        .rv-details-attrib-key {
            margin-right: 0;
            padding-right: 10px;
            position: relative;
            font-weight: bold;
            float: left;
        }

        .rv-details-attrib-value {
            margin-right: 0;
            padding-left: 15px;
            position: relative;
            float: right;
        }

        .rv-sub-subhead {
            font-size: rem(1.6);
        }
    }
}

